[tool.poetry]
name = "drl-control"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{include = "drl_control"}]

[tool.poetry.dependencies]
python = "3.11.7"
black = "^24.4.0"
dm-control = "^1.0.18"
mujoco-python-viewer = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
